--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battery Percent Indicator</title>
     <link rel="stylesheet" href="/sass/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="battery">
         <div class="card">
+            <div class="data">
             <p>Battery</p>
             <h1>20%</h1>
-            <p>Low Battery </p>
+            <p>Low Battery <i class="fa-solid fa-plug"></i></p>
+        </div>
+        <div class="batteryPill">
+
+        </div>
         </div>
     </section>
 
