--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="battery">
         <div class="card">
             <div class="data">
-            <p>Battery</p>
-            <h1>20%</h1>
-            <p>Low Battery <i class="fa-solid fa-plug"></i></p>
-        </div>
-        <div class="batteryPill">
-
-        </div>
+                <p>Battery</p>
+                <h1>20%</h1>
+                <p>Low Battery <i class="fa-solid fa-plug"></i></p>
+            </div>
+            <div class="batteryPill">
+                <div class="batteryLevel">
+                    <div class="batteryLiquid"></div>
+                </div>
+            </div>
         </div>
     </section>
 
