--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="data">
                 <p>Battery</p>
                 <h1>20%</h1>
-                <p>Low Battery <i class="fa-solid fa-plug"></i></p>
+                <p>Low Battery <i class="fa-solid fa-plug animated-green"></i></p>
             </div>
             <div class="batteryPill">
                 <div class="batteryLevel">
