declaring variables in js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="data">
                 <p>Battery</p>
                 <h1>20%</h1>
-                <p>Low Battery <i class="fa-solid fa-plug "></i></p>
-                
+                <p class="status">Low Battery <i class="fa-solid fa-plug "></i></p>
+
             </div>
             <div class="batteryPill">
                 <div class="batteryLevel">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-
+<script src="main.js"></script>
 </body>
 
 </html>
