code didn't work....debugging

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="card">
             <div class="data">
                 <p>Battery</p>
-                <h1>20%</h1>
+                <h1 class="percent">20%</h1>
                 <p class="status">Low Battery <i class="fa-solid fa-plug "></i></p>
 
             </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </section>
-<script src="main.js"></script>
+<script src="/main.js"></script>
 </body>
 
 </html>
